--- a/home.css
+++ b/home.css
@@ -2,21 +2,28 @@
   margin: 0;
   padding: 0;
 }
+body{
+  background-image: url("./image/landingpage.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  
+}
 nav {
-  background-color: #b2b0b0;
-  /* background-color: #6ec0ff; */
-  /* background-color: #2c2a8a; */
+  background-color:transparent;
   width: 100%;
   height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+ 
 }
 .navbar {
   width: 95%;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  /* border: 1px solid #22215B; */
 }
 nav .options {
   display: flex;
@@ -37,14 +44,14 @@ nav .options li {
 }
 
 nav .options li a {
-  color: white;
+  color: #22215B;
   text-decoration: none;
   position: relative;
   font-size: 22px;
 }
 
 nav .options li a:hover {
-  color: #000000;
+  color: #044faa;
   /* text-decoration: underline; */
   top: -0.16em;
   transition: padding 0.5s, top 0.35s, box-shadow 0.4s;
@@ -75,14 +82,14 @@ nav .options li a:hover {
   transition: padding 0.5s, top 0.35s, box-shadow 0.4s;
   box-shadow: 0 0.4rem 0 -0.2rem #b2b0b0;
 }
-.section1{
+/* .section1{
     width: 100%;
     height: 615px;
     background-image: url("./image/landingpage.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-}
+} */
 .content{
     
     display: flex;
