--- a/signup.css
+++ b/signup.css
@@ -16,7 +16,7 @@
 }
 .signup {
   width: 25%;
-  height: 500px;
+  height: 550px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -102,4 +102,22 @@ button:hover {
 .signup a:hover {
   color: rgb(236, 59, 59);
 }
+.selection{
+  width: 280px;
+  border-radius: 10px;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  padding-right: 10px;
 
+}
+.selection select{
+  width: 100%;
+  background-color: #F5F5F5;   
+  border-radius: 5px;
+  padding: 15px;
+  font-size: 18px;
+  border: none;
+  outline: none;
+}
