--- a/home.css
+++ b/home.css
@@ -1,12 +1,14 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
-  background-image: url("./image/landingpage.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+  height: 100vh;
+  background-image: linear-gradient(rgba(255,255,255,0.65),rgba(255,255,255,0.65)),url("./image/landingpage.jpg");
   
 }
 nav {
