--- a/user.css
+++ b/user.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   nav {
     background-color: #b2b0b0;
@@ -78,7 +79,7 @@
   .section1{
       width: 100%;
       height: 615px;
-      background-image: url("./image/user3.jpg");
+      background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("./image/user2.jpg");
       background-size: cover;
       background-repeat: no-repeat;
       position: relative;
