--- a/admin.css
+++ b/admin.css
@@ -1,109 +1,93 @@
-* {
-    margin: 0;
-    padding: 0;
-  }
-  nav {
-    background-color: #b2b0b0;
-    /* background-color: #6ec0ff; */
-    /* background-color: #2c2a8a; */
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .navbar {
-    width: 95%;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-  }
-  nav .options {
-    display: flex;
-    align-items: center;
-    width: 50%;
-  }
-  nav .options ul {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  nav .logo img {
-    width: 80px;
-  }
-  nav .options li {
-    list-style: none;
-  }
-  
-  nav .options li a {
-    color: white;
-    text-decoration: none;
-    position: relative;
-    font-size: 22px;
-  }
-  
-  nav .options li a:hover {
-    color: #000000;
-    /* text-decoration: underline; */
-    top: -0.16em;
-    transition: padding 0.5s, top 0.35s, box-shadow 0.4s;
-    box-shadow: 0 0.4rem 0 -0.2rem #000000;
-  }
-  .logout {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 10px;
-    padding-right: 10px;
-  }
-  .logout button {
-    width: 80px;
-    height: 50px;
-    border-radius: 10px;
-    background-color: transparent;
-    color: black;
-    font-size: 17px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    position: relative;
-  }
-  .logout button:hover {
-    background-color: blue;
-    border: 2px solid #0e2c9a;
-    top: -0.16em;
-    transition: padding 0.5s, top 0.35s, box-shadow 0.4s;
-    box-shadow: 0 0.4rem 0 -0.2rem #b2b0b0;
-  }
-  .section1{
-      width: 100%;
-      height: 615px;
-      background-image: url("/image/admin2.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      position: relative;
-  }
-  .content{
-      
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      padding: 120px;
-  }
-  .content h1{
-      font-size: 40px;
-      color: #22215B;
-      text-align: center;
-      font-style: italic;
-  }
-  .content h2{
-      font-size: 80px;
-      color: #22215B;
-      text-align: center;
-  }
-  .content p{
-      font-size: 25px;
-      color: #171766;
-      text-align: center;
-  }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
+.header {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
+.sidebar {
+  width: 200px;
+  height: 100vh;
+  background-color: #3f5efb;
+  color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding-top: 20px;
+}
+.sidebar a {
+  font-size: 12px;
+  color: #fff;
+  display: block;
+  padding: 12px;
+  padding-left: 30px;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.sidebar a:hover {
+  color: #3f5efb;
+  background: #fff;
+  outline: none;
+  position: relative;
+  background-color: #fff;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+.sidebar a:hover::after {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: 100%;
+  right: 0;
+  height: 35px;
+  width: 35px;
+  border-bottom-right-radius: 18px;
+  box-shadow: 0 20px 0 0 #fff;
+}
+.sidebar a:hover::before {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  top: 38px;
+  right: 0;
+  height: 35px;
+  width: 35px;
+  border-top-right-radius: 18px;
+  box-shadow: 0 -20px 0 0 #fff;
+}
+
+.content {
+  margin-left: 200px;
+  padding: 20px;
+}
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.card h3 {
+  margin-top: 0;
+}
+.card p {
+  margin: 5px 0;
+}
+.overview {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+.overview div {
+  background-color: white;
+  padding: 20px;
+  width: 23%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.overview div h3 {
+  margin: 0 0 10px;
+}
