--- a/admin.css
+++ b/admin.css
@@ -10,7 +10,9 @@ body {
   padding: 10px;
   text-align: center;
 }
-.sidebar {
+.menu {
+  display: flex;
+  flex-direction: column;
   width: 200px;
   height: 100vh;
   background-color: #3f5efb;
@@ -20,8 +22,29 @@ body {
   left: 0;
   padding-top: 20px;
 }
+.menu img {
+  width: 190px;
+  position: relative;
+  padding-bottom: 20px;
+}
+.menu hr {
+  width: 90%;
+}
+.sidebar {
+  width: 200px;
+  height: 100%;
+  background-color: #3f5efb;
+  color: white;
+  padding-top: 20px;
+}
+.menu .options1{
+  background-color: #ffffff;
+  position: fixed;
+  bottom: 0;
+  left:0;
+}
 .sidebar a {
-  font-size: 12px;
+  font-size: 15px;
   color: #fff;
   display: block;
   padding: 12px;
