--- a/Tenant.css
+++ b/Tenant.css
@@ -5,13 +5,12 @@ body {
   background-color: #f4f4f4;
 }
 .header {
-  background-color: #333;
-  color: white;
-  background-color: #05a3d8d3; /* Semi-transparent background */
+  color: black  ;
+  background-color: #f1f1f1d3; /* Semi-transparent background */
   backdrop-filter: blur(10px); /* Blur effect */
   -webkit-backdrop-filter: blur(10px); /* For Safari */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  padding: 15px;
+  padding: 5px;
   text-align: center;
 }
 .menu {
@@ -19,13 +18,12 @@ body {
   flex-direction: column;
   width: 250px;
   height: 100vh;
-  background-color: #00ABE4;
+  background-color: #22215B;  
   color: white;
   position: fixed;
   top: 0;
   left: 0;
   padding-top: 20px;
-  border-top-right-radius: 80px;
 }
 .menu img {
   width: 120px;
@@ -39,7 +37,7 @@ body {
 .sidebar {
   width: 250px;
   height: 100%;
-  background-color: #00ABE4;
+  background-color: #22215B;
   color: white;
   padding-top: 20px;
   /* transition: 0.5s; */
