--- a/admin.css
+++ b/admin.css
@@ -5,27 +5,27 @@ body {
   background-color: #f4f4f4;
 }
 .header {
-  background-color: #333;
-  color: white;
-  background-color: #039accd3; /* Semi-transparent background */
+  color: black  ;
+  background-color: #f1f1f1d3; /* Semi-transparent background */
   backdrop-filter: blur(10px); /* Blur effect */
   -webkit-backdrop-filter: blur(10px); /* For Safari */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  padding: 15px;
+  padding: 5px;
   text-align: center;
+ 
 }
 .menu {
   display: flex;
   flex-direction: column;
   width: 250px;
   height: 100vh;
-  background-color: #00abe4;
+  background-color: #22215B;
   color: white;
   position: fixed;
   top: 0;
   left: 0;
   padding-top: 20px;
-  border-top-right-radius: 80px;
+  /* border-top-right-radius: 30px; */
 }
 .menu img {
   width: 120px;
@@ -39,7 +39,7 @@ body {
 .sidebar {
   width: 250px;
   height: 100%;
-  background-color: #00abe4;
+  background-color: #22215B;
   color: white;
   padding-top: 20px;
   /* transition: 0.5s; */
@@ -87,7 +87,7 @@ body {
 }
 
 .content {
-  margin-left: 400px;
+  margin-left: 200px;
   padding: 20px;
 }
 .card {
@@ -103,32 +103,37 @@ body {
   margin: 5px 0;
 }
   .overview {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 columns */
-    grid-template-rows: auto; /* Automatically adjust rows */
-    gap: 20px; /* Space between grid items */
-    box-shadow: #333;
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    grid-template-rows: auto; 
+    gap: 20px; 
+    box-shadow: #333; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:40px;
 
 }
-.overview div {
+.overview .card{
   background-color: white;
-  border-radius: 50%;
   padding: 20px;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 100px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  gap: 20px;
 }
 .overview div h3 {
   margin: 0 0 10px;
 }
-/* .options{
-  display: flex;
-  width: 100%;
+.overview div img{
+  width: 50px;
 }
-.options img{
-  width: 25px;
-} */
+.contents {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
