--- a/Tenant.css
+++ b/Tenant.css
@@ -6,9 +6,9 @@ body {
 }
 .header {
   color: black  ;
-  background-color: #f1f1f1d3; /* Semi-transparent background */
-  backdrop-filter: blur(10px); /* Blur effect */
-  -webkit-backdrop-filter: blur(10px); /* For Safari */
+  background-color: #f1f1f1d3; 
+  backdrop-filter: blur(10px); 
+  -webkit-backdrop-filter: blur(10px); 
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 5px;
   text-align: center;
@@ -40,7 +40,7 @@ body {
   background-color: #22215B;
   color: white;
   padding-top: 20px;
-  /* transition: 0.5s; */
+  
 }
 .sidebar a {
   font-size: 15px;
@@ -50,7 +50,7 @@ body {
   padding-left: 30px;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
-  /* transition: 0.5s; */
+  
 }
 .sidebar a:hover {
   color: #3f5efb;
@@ -113,7 +113,7 @@ body {
 }
 .overview div h3 {
   margin: 0 0 10px;
-}/* Container Styles */
+}
 .container {
   display: flex;
   justify-content: center;
@@ -121,7 +121,7 @@ body {
   margin: 20px;
 }
 
-/* Table Styles */
+
 table {
   width: 90%;
   border-collapse: collapse;
@@ -132,35 +132,34 @@ table {
   transition: all 0.3s ease; 
 }
 
-/* Borders */
+
 table, th, td {
   border: 1px solid #ddd;
 }
 
-/* Header and Data Cells */
+
 th, td {
   padding: 8px;
   text-align: left;
-  position: relative; /* For the pseudo-elements */
+  position: relative;
 }
 
-/* Header Styles */
 th {
   background-color: #22215B;
   color: white;
 }
 
-/* Button Styles */
+
 .btn {
   padding: 8px 16px;
   color: white;
   border: none;
   cursor: pointer;
   border-radius: 4px;
-  transition: background-color 0.3s ease; /* Smooth transition for button hover */
+  transition: background-color 0.3s ease; 
 }
 
-/* Button Colors */
+
 .btn-block {
   background-color: #e74c3c;
 }
@@ -169,29 +168,29 @@ th {
   background-color: #27ae60;
 }
 
-/* Button Hover Effect */
+
 .btn:hover {
   opacity: 0.8;
   background-color: #ca0000;
 }
 
-/* Table Row Hover Effect */
+
 tbody tr {
-  transition: background-color 0.4s ease, transform 0.4s ease; /* Smooth transition */
+  transition: background-color 0.4s ease, transform 0.4s ease;
 }
 
 tbody tr:hover {
-  background-color: #f5f5f5; /* Light gray background on hover */
-  color:#22215B; /* Text color on hover */
-  transform: scale(1.02); /* Slight zoom effect */
+  background-color: #f5f5f5; 
+  color:#22215B; 
+  transform: scale(1.02); 
 }
 
-/* Optional: Adding a subtle shadow on hover */
+
 tbody tr:hover td {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
 
-/* Optional: Adding an underline effect on hover */
+
 tbody tr:hover td::before {
   content: '';
   position: absolute;
@@ -199,7 +198,7 @@ tbody tr:hover td::before {
   bottom: 0;
   width: 100%;
   height: 2px;
-  background: #22215B; /* Underline color */
+  background: #22215B; 
   transition: width 0.3s ease;
   transform: scaleY(0);
 }
