--- a/admin.css
+++ b/admin.css
@@ -6,9 +6,9 @@ body {
 }
 .header {
   color: black  ;
-  background-color: #f1f1f1d3; /* Semi-transparent background */
-  backdrop-filter: blur(10px); /* Blur effect */
-  -webkit-backdrop-filter: blur(10px); /* For Safari */
+  background-color: #f1f1f1d3; 
+  backdrop-filter: blur(10px); 
+  -webkit-backdrop-filter: blur(10px); 
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 5px;
   text-align: center;
@@ -25,7 +25,6 @@ body {
   top: 0;
   left: 0;
   padding-top: 20px;
-  /* border-top-right-radius: 30px; */
 }
 .menu img {
   width: 120px;
@@ -42,7 +41,6 @@ body {
   background-color: #22215B;
   color: white;
   padding-top: 20px;
-  /* transition: 0.5s; */
 }
 .sidebar a {
   font-size: 15px;
@@ -52,7 +50,6 @@ body {
   padding-left: 30px;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
-  /* transition: 0.5s; */
 }
 .sidebar a:hover {
   color: #3f5efb;
