--- a/home.css
+++ b/home.css
@@ -1,9 +1,10 @@
 * {
+  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-body{
+.sectionz{
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -50,6 +51,7 @@ nav .options li a {
   text-decoration: none;
   position: relative;
   font-size: 22px;
+  
 }
 
 nav .options li a:hover {
@@ -116,3 +118,106 @@ nav .options li a:hover {
     color: #171766;
     text-align: center;
 }
+.about-section {
+  text-align: center;
+  padding: 50px;
+  background: linear-gradient(135deg, #8BC6EC, #9599E2);
+  color: #333;
+  border: none;
+
+}
+
+.about-heading {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.about-description {
+  font-size: 1.2rem;
+  max-width: 800px;
+  margin: 0 auto;
+  line-height: 1.8;
+}
+
+.service-area {
+  margin-top: 30px;
+  font-size: 1.2rem;
+  color: #ffffff;
+}
+
+
+      .why-list-with-us {
+          text-align: center;
+          padding: 60px 20px;
+          background: linear-gradient(135deg, #8BC6EC, #9599E2);
+      }
+
+      .why-list-with-us h2 {
+          color: #22215B;
+          font-size: 2rem;
+          margin-bottom: 20px;
+      }
+
+      .why-list-with-us p {
+          color: #ffffff;
+          font-size: 1.2rem;
+          margin-bottom: 40px;
+      }
+
+      .benefits-grid {
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
+          gap: 20px;
+          justify-items: center;
+          max-width: 1200px;
+          margin: 0 auto;
+      }
+
+      .benefit {
+          background-color: #d9eaf9;
+          padding: 20px;
+          border-radius: 10px;
+          text-align: center;
+          transition: transform 0.3s ease;
+      }
+
+      .benefit:hover {
+          transform: translateY(-10px);
+      }
+
+      .benefit img {
+          width: 50px;
+          margin-bottom: 20px;
+      }
+
+      .benefit h4 {
+          color: #333;
+          font-size: 1.2rem;
+          margin-bottom: 10px;
+      }
+
+      .benefit p {
+          color: #555;
+          font-size: 1rem;
+      }
+
+      .cta-button {
+          margin-top: 30px;
+      }
+
+      .cta-button button {
+        background: linear-gradient(135deg, #0093efdf, #71cbe4);
+          color: white;
+          padding: 10px 20px;
+          border: none;
+          border-radius: 5px;
+          font-size: 1rem;
+          cursor: pointer;
+      }
+
+      .cta-button button:hover {
+        background: linear-gradient(135deg, #71cbe4, #009dff);
+        transition: .6s linear;
+      }
