--- a/owner.css
+++ b/owner.css
@@ -24,6 +24,9 @@ body {
   text-align: center;
   height: 70PX;
 }
+.header h1{
+  margin-left: 150px;
+}
 .menu {
   display: flex;
   flex-direction: column;
@@ -103,7 +106,9 @@ body {
 }
 
 .overview-grid {
-  display: grid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   margin-bottom: 40px;
@@ -111,6 +116,8 @@ body {
 
 .box {
   padding: 20px;
+  width: 300px;
+  height: 100px;
   border-radius: 8px;
   background-color: #f4f4f4;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -126,7 +133,12 @@ body {
 }
 
 .box h2 {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  font-size: 26px;
+}
+.box p {
+  font-size: 22px;
+  font-weight: 800;
 }
 
 table {
@@ -218,5 +230,56 @@ button {
 
 .btn:hover {
   opacity: 0.8;
-  background-color: #ca0000;
+  background-color: #00227e;
 }
+
+.flex-container {
+  display: flex;
+  align-items: center; /* Aligns items vertically */
+  justify-content: center;
+  gap: 10px; /* Adds space between the button and icon */
+}
+
+.btn {
+  margin: 0; /* Ensure no extra margin on the button */
+}
+
+tbody a img:hover {
+  cursor: pointer; /* Optional: make the icon look clickable */
+  transform: scale(1.3);
+  transition: 0.3s;
+
+}
+  
+tbody tr {
+  transition: background-color 0.4s ease, transform 0.4s ease; 
+}
+
+tbody tr:hover {
+  background-color: #f5f5f5;
+  color:#22215B;
+  transform: scale(1.02); 
+}
+
+
+tbody tr:hover td {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+}
+
+tbody tr:hover td::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #22215B; 
+  transition: width 0.3s ease;
+  transform: scaleY(0);
+}
+
+tbody tr:hover td::before {
+  transform: scaleY(1);
+}
+
+  
