--- a/user.css
+++ b/user.css
@@ -303,3 +303,52 @@ nav .options li a:hover {
 .card button:hover {
   background-color: #2980b9;
 }
+.filter{
+  padding-top: 30px;
+  width: 100%;
+  height: 180px;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+ background-color: white;
+}
+.filter-form{
+  background-color: #f1f1f1d3; 
+  backdrop-filter: blur(10px); 
+  -webkit-backdrop-filter: blur(10px); 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 50px;
+}
+.filter-form select{
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.filter-form input{
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+.filter-form button{
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.filter-form button:hover {
+  background-color: #0056b3; /* Slightly darker color on hover */
+  transform: scale(0.9);
+  transition: 0.3s;
+}
+.filter-form select:hover{
+  border: 1px solid #363636;
+}
+.filter-form input:hover{
+  border: 1px solid #363636;
+}
