--- a/user.css
+++ b/user.css
@@ -38,12 +38,14 @@ nav .options {
   display: flex;
   align-items: center;
   width: 50%;
+  gap: 20px;
 }
 nav .options ul {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-top: 10px;
 }
 nav .logo img {
   width: 80px;
@@ -89,6 +91,11 @@ nav .options li a:hover {
   align-items: center;
   padding-top: 10px;
   padding-right: 10px;
+  gap: 20px;
+}
+.logout img{
+  width: 50px;
+  height: 50px;
 }
 .logout button {
   width: 80px;
