--- a/user.css
+++ b/user.css
@@ -359,3 +359,43 @@ nav .options li a:hover {
 .filter-form input:hover{
   border: 1px solid #363636;
 }
+.logout img:hover{
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+.cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative; /* Add this line */
+}
+
+.cart a img {
+  width: 45px;
+}
+
+.cart .color {
+  position: absolute; /* Keep this as is */
+  top: -5px; /* Adjust the value for better positioning */
+  right: -10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
+  padding: 1px;
+}
+
+.cart .color p {
+  font-size: 12px;
+  color: white;
+  margin: 0; /* Remove left margin for better centering */
+  line-height: 20px; /* Center text vertically */
+  text-align: center; /* Center text horizontally */
+}
+
+.cart:hover{
+  transform: scale(1);
+      cursor: pointer;
+  /* top: -0.16em;
+  transition: padding 0.5s, top 0.35s, box-shadow 0.4s; */
+}
